# RendererSystem

./: .gitIgnore  CMakeLists.txt  README.md  output.ppm  render.ppm  render_color.ppm  render_shadow.ppm
src/: main.cpp
src/core/: Camera.hpp  Geometry.hpp  Light.hpp  Plane.hpp  Ray.hpp  Scene.hpp  Triangle.hpp
src/math/: Vec3.hpp
src/platform/: Win32Window.cpp  Win32Window.hpp
